# asantico-ops

./: .gitignore  .mcp.json  CLAUDE.md  DEMO.md  ENVIRONMENT.md  README.md  RISKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/week10/: technical-report.md
docs/week9/: README.md  backlog-completion-report.md  code-review-packet.md  hitl-validation-evidence.md  peer-reviewer-briefing.md  technical-report-draft.md  user-test-briefing.md
docs/week9/evidence/: agent.jsonl  cli-session-transcript.txt  user-test-session.jsonl
knowledge-rag/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
knowledge-rag/corpus/: client-accounts.md  service-trades.md
knowledge-rag/eval/: eval_questions.json  evaluation_report.md
knowledge-rag/knowledge_rag/: agent.py  embeddings.py  evaluate.py  ingest.py  retrieve.py
knowledge-rag/src/: agent.py  embeddings.py  evaluate.py  ingest.py  retrieve.py
knowledge-rag/tests/: test_eval_math.py
ops-agent/: .env.example  BACKLOG.md  DELEGATION.md  README.md  SPEC.md  requirements-dev.txt  requirements.txt
ops-agent/knowledge/: billing-workflow.md  company-policies.md  tax-rules.md  work-order-intake.md
ops-agent/logs/: agent.jsonl
ops-agent/src/: gateway.py  llm.py  local_llm.py  mcp_server.py  observability.py  policy.py  voice.py
ops-agent/src/agent/: loop.py  router.py
ops-agent/src/channels/: base.py  cli.py  email_channel.py  telegram.py  (+1 more)
ops-agent/tests/: test_agent.py  test_knowledge_base.py  test_mcp_and_observability.py  test_router_llm.py  test_telegram_channel.py  test_triage.py
(+6 files in other folders)
