[project]
name = "asantico-ops"
version = "0.1.0"
description = "Local-first operations agent for a property-maintenance business, with a LlamaIndex knowledge RAG subsystem."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "llama-index-core==0.14.22",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/data/index"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
